
2012-09-25  Andrew L Janke <a.janke@gmail.com> + Vladimir Fonov
   * split libminc from minc-tools
   * started build of minc2 only for ITK

-- Release of minc 2.2.00 --

2012-09-24  Andrew L Janke <a.janke@gmail.com>
   * added make_mincmorph_kernel.pl
   * merged changed from develop branch
   * added -size arguments to mincresample

2012-08-03  Andrew L Janke <a.janke@gmail.com>
   * progs/mincheader/mincheader: fixed to handle files with spaces

2012-06-21  Andrew L Janke <a.janke@gmail.com>
   * added mincblob.man1 and updated configure.ac and Makefile.am

2012-05-16  Andrew L Janke <a.janke@gmail.com>
   * added patches from Jordi Gutiérrez Hermoso
   * libsrc/hdf_convenience.c: added default switch case
   * libsrc/ParseArgv.c: added intptr_t casts
   * conversion/dcm2mnc/dicom_to_minc.c: added initialisation of tmp_offset

2012-04-10  Andrew L Janke <a.janke@gmail.com>
   * libsrc2/grpattr.c: added a history patch from Leila

2012-03-14  Andrew L Janke <a.janke@gmail.com>
   * added progs/mincsample

2012-03-14  Andrew L Janke <a.janke@gmail.com>
   * added progs/mincmorph

-- Release of minc 2.1.10 --

2012-02-22  Andrew L Janke <a.janke@gmail.com>
   * added a patch from Steve Robbins that factors references to PATH_MAX
      out to fix a build problem on hurd

2011-12-20  Andrew L Janke <a.janke@gmail.com>
   * libsrc/netcdf_convenience.c: changed execute_decompress_command()
      to always decompress the whole file as the approach used for
      netCDF files for header_only does not work with HDF5 MINC2 files
   * merged Vlad's ezminc branch

2011-06-29  Andrew L Janke  <a.janke@gmail.com>
   * configure.in: changed typo from enable to disable minc2

2011-05-30  Andrew L Janke  <a.janke@gmail.com>
   * progs/minccalc: added imax() and imin() operators

2011-04-29  Andrew L Janke  <a.janke@gmail.com>
   * libsrc2/volume.c: added minc_version global
   * libsrc/netcdf_convenience.c: added minc_version global
