@@ -6,7 +6,7 @@ INCLUDES = \
         -I$(top_srcdir)/volume_io/Include \
         -I$(top_srcdir)/progs/Proglib
 
-LDADD = ../../libvolume_io2.la ../../libminc2.la
+LDADD = ../../libminc2.la
 
 noinst_PROGRAMS = example_modify example_tags example_volume_io
 check_PROGRAMS = test-xfm
