@@ -1,3 +1,6 @@
+2013-07-09  Vladimir Fonov 
+   * Lots of bug fixes in minc2
+   * Joining of volume_io into main library
 
 2012-09-25  Andrew L Janke <a.janke@gmail.com> + Vladimir Fonov
    * split libminc from minc-tools
